config/openshift/main/dc.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Route
  metadata:
    name: perftest
  spec:
    to:
      kind: Service
      name: perftest
- apiVersion: v1
  kind: Service
  metadata:
    name: perftest
  spec:
    ports:
    - port: 8080
      targetPort: 8080
    selector:
      name: perftest
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: perftest
  spec:
    template:
      metadata:
        labels:
          name: perftest
      spec:
        containers:
          - name: perftest
            image: "${imageName}"
            ports:
              - containerPort: 8080
                protocol: TCP
            readinessProbe:
              httpGet:
                path: /health/
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 21
            livenessProbe:
              httpGet:
                path: /ping/
                port: 8080
              initialDelaySeconds: 10
              failureThreshold: 5
              periodSeconds: 19
              timeoutSeconds: 5
            volumeMounts:
              - mountPath: /app/web/mnt
                name: perftest-gluster-pv
        volumes:
            - name: perftest-gluster-pv
              persistentVolumeClaim:
                claimName: perftest-gluster-pvc
    replicas: 1
    strategy:
      type: Recreate
    paused: false
    revisionHistoryLimit: 2
    minReadySeconds: 0
